--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <header class="header">
     <div class="container header-content">
       <div class="profile-photo">
-        <img src="profile.jpg" alt="Foto de perfil">
+        <img src="assets/img/profile.jpg" alt="Foto de perfil">
       </div>
       <div class="intro">
-        <h1 class="fade-in">¡Hola, soy Miguel Angel Carlos Rojas!</h1>
-        <p class="fade-in delay-1">Desarrollador Web | Diseñador | Freelancer</p>
+        <h1>¡Hola, soy Miguel Angel Carlos Rojas!</h1>
+        <p>
+          <span class="typing-text" data-text="Desarrollador Web | Diseñador | Freelancer"></span>
+        </p>
       </div>
     </div>
   </header>
@@ -42,12 +44,24 @@
             <p>Habilidad para crear aplicaciones interactivas y dinámicas.</p>
           </div>
           <div class="skill fade-in delay-3">
-            <h3>React.js</h3>
-            <p>Experiencia en el desarrollo de aplicaciones frontend con React.</p>
+            <h3>TypeScript</h3>
+            <p>Escritura de código tipado para aplicaciones robustas y escalables.</p>
           </div>
           <div class="skill fade-in delay-4">
-            <h3>Diseño UI/UX</h3>
-            <p>Creación de diseños atractivos y fáciles de usar.</p>
+            <h3>Vite + React</h3>
+            <p>Desarrollo rápido de aplicaciones frontend con herramientas modernas.</p>
+          </div>
+          <div class="skill fade-in delay-5">
+            <h3>Angular</h3>
+            <p>Creación de aplicaciones web robustas con arquitectura MVC.</p>
+          </div>
+          <div class="skill fade-in delay-6">
+            <h3>Bootstrap</h3>
+            <p>Desarrollo eficiente con componentes predefinidos y estilos modernos.</p>
+          </div>
+          <div class="skill fade-in delay-7">
+            <h3>Tailwind CSS</h3>
+            <p>Estilización personalizada y flexible para proyectos frontend.</p>
           </div>
         </div>
       </div>
@@ -79,5 +93,7 @@
       <p>© 2024 Miguel Angel Carlos Rojas. Todos los derechos reservados.</p>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
