--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio de Miguel Angel Carlos Rojas</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <!-- Barra de navegación -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#">Inicio</a></li>
+      <li><a href="#">Sobre mí</a></li>
+      <li><a href="#">Habilidades</a></li>
+      <li><a href="#">Proyectos</a></li>
+    </ul>
+  </nav>
+
   <header class="header">
     <div class="container header-content">
       <div class="profile-photo">
@@ -15,13 +25,14 @@
       <div class="intro">
         <h1>¡Hola, soy Miguel Angel Carlos Rojas!</h1>
         <p>
-          <span class="typing-text" data-text="Desarrollador Web | Diseñador | Freelancer"></span>
+          <span class="typing-text"></span>
         </p>
       </div>
     </div>
   </header>
 
   <main>
+    <!-- Sección disponible para crear proyectos -->
     <section id="available" class="available">
       <div class="container">
         <h2>Estoy disponible para crear proyectos</h2>
@@ -31,6 +42,7 @@
       </div>
     </section>
 
+    <!-- Habilidades y Tecnologías -->
     <section id="skills" class="skills">
       <div class="container">
         <h2>Habilidades y Tecnologías</h2>
@@ -67,6 +79,7 @@
       </div>
     </section>
 
+    <!-- Proyectos Destacados -->
     <section id="projects" class="projects">
       <div class="container">
         <h2>Proyectos Destacados</h2>
