--- a/index.html
+++ b/index.html
@@ -1,112 +1,124 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio de Miguel Angel Carlos Rojas</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-  <!-- Barra de navegación -->
-  <nav class="navbar">
-    <ul>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Sobre mí</a></li>
-      <li><a href="#">Habilidades</a></li>
-      <li><a href="#">Proyectos</a></li>
-    </ul>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portafolio de Miguel Angel Carlos Rojas</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <!-- Barra de navegación -->
+    <nav class="navbar">
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Sobre mí</a></li>
+        <li><a href="#">Habilidades</a></li>
+        <li><a href="#">Proyectos</a></li>
+      </ul>
+    </nav>
 
-  <header class="header">
-    <div class="container header-content">
-      <div class="profile-photo">
-        <img src="assets/img/profile.jpg" alt="Foto de perfil">
-      </div>
-      <div class="intro">
-        <h1>¡Hola, soy Miguel Angel Carlos Rojas!</h1>
-        <p>
-          <span class="typing-text"></span>
-        </p>
-      </div>
-    </div>
-  </header>
-
-  <main>
-    <!-- Sección disponible para crear proyectos -->
-    <section id="available" class="available">
-      <div class="container">
-        <h2>Estoy disponible para crear proyectos</h2>
-        <p>Actualmente estoy aceptando nuevos proyectos y me encantaría saber de los suyos.</p>
-        <p>¡Tómate un minuto y cuéntame qué tienes en mente!</p>
-        <a href="#projects" class="btn">Ver mis proyectos</a>
-      </div>
-    </section>
-
-    <!-- Habilidades y Tecnologías -->
-    <section id="skills" class="skills">
-      <div class="container">
-        <h2>Habilidades y Tecnologías</h2>
-        <div class="skills-grid">
-          <div class="skill fade-in delay-1">
-            <h3>HTML & CSS</h3>
-            <p>Experto en diseño de interfaces web modernas y funcionales.</p>
-          </div>
-          <div class="skill fade-in delay-2">
-            <h3>JavaScript</h3>
-            <p>Habilidad para crear aplicaciones interactivas y dinámicas.</p>
-          </div>
-          <div class="skill fade-in delay-3">
-            <h3>TypeScript</h3>
-            <p>Escritura de código tipado para aplicaciones robustas y escalables.</p>
-          </div>
-          <div class="skill fade-in delay-4">
-            <h3>Vite + React</h3>
-            <p>Desarrollo rápido de aplicaciones frontend con herramientas modernas.</p>
-          </div>
-          <div class="skill fade-in delay-5">
-            <h3>Angular</h3>
-            <p>Creación de aplicaciones web robustas con arquitectura MVC.</p>
-          </div>
-          <div class="skill fade-in delay-6">
-            <h3>Bootstrap</h3>
-            <p>Desarrollo eficiente con componentes predefinidos y estilos modernos.</p>
-          </div>
-          <div class="skill fade-in delay-7">
-            <h3>Tailwind CSS</h3>
-            <p>Estilización personalizada y flexible para proyectos frontend.</p>
-          </div>
+    <header class="header">
+      <div class="header-content">
+        <div class="profile-photo">
+          <img src="assets/img/profile.jpg" alt="Foto de perfil" />
+        </div>
+        <div class="intro">
+          <h1>¡Hola, soy Miguel Carlos!</h1>
+          <p><span class="typing-text"></span></p>
         </div>
       </div>
-    </section>
+    </header>
 
-    <!-- Proyectos Destacados -->
-    <section id="projects" class="projects">
-      <div class="container">
-        <h2>Proyectos Destacados</h2>
-        <div class="project-grid">
-          <div class="project-card fade-in">
-            <h3>Proyecto 1</h3>
-            <p>Descripción breve del proyecto.</p>
-          </div>
-          <div class="project-card fade-in delay-1">
-            <h3>Proyecto 2</h3>
-            <p>Descripción breve del proyecto.</p>
-          </div>
-          <div class="project-card fade-in delay-2">
-            <h3>Proyecto 3</h3>
-            <p>Descripción breve del proyecto.</p>
+    <main>
+      <!-- Sección disponible para crear proyectos -->
+      <section id="available" class="available">
+        <div class="container">
+          <h2>Estoy disponible para crear proyectos</h2>
+          <p>
+            Actualmente estoy aceptando nuevos proyectos y me encantaría saber
+            de los suyos.
+          </p>
+          <p>¡Tómate un minuto y cuéntame qué tienes en mente!</p>
+          <a href="#projects" class="btn">Ver mis proyectos</a>
+        </div>
+      </section>
+
+      <!-- Habilidades y Tecnologías -->
+      <section id="skills" class="skills">
+        <div class="container">
+          <h2>Habilidades y Tecnologías</h2>
+          <div class="skills-grid">
+            <div class="skill fade-in delay-1">
+              <h3>HTML & CSS</h3>
+              <p>Experto en diseño de interfaces web modernas y funcionales.</p>
+            </div>
+            <div class="skill fade-in delay-2">
+              <h3>JavaScript</h3>
+              <p>Habilidad para crear aplicaciones interactivas y dinámicas.</p>
+            </div>
+            <div class="skill fade-in delay-3">
+              <h3>TypeScript</h3>
+              <p>
+                Escritura de código tipado para aplicaciones robustas y
+                escalables.
+              </p>
+            </div>
+            <div class="skill fade-in delay-4">
+              <h3>Vite + React</h3>
+              <p>
+                Desarrollo rápido de aplicaciones frontend con herramientas
+                modernas.
+              </p>
+            </div>
+            <div class="skill fade-in delay-5">
+              <h3>Angular</h3>
+              <p>Creación de aplicaciones web robustas con arquitectura MVC.</p>
+            </div>
+            <div class="skill fade-in delay-6">
+              <h3>Bootstrap</h3>
+              <p>
+                Desarrollo eficiente con componentes predefinidos y estilos
+                modernos.
+              </p>
+            </div>
+            <div class="skill fade-in delay-7">
+              <h3>Tailwind CSS</h3>
+              <p>
+                Estilización personalizada y flexible para proyectos frontend.
+              </p>
+            </div>
           </div>
         </div>
+      </section>
+
+      <!-- Proyectos Destacados -->
+      <section id="projects" class="projects">
+        <div class="container">
+          <h2>Proyectos Destacados</h2>
+          <div class="project-grid">
+            <div class="project-card fade-in">
+              <h3>Proyecto 1</h3>
+              <p>Descripción breve del proyecto.</p>
+            </div>
+            <div class="project-card fade-in delay-1">
+              <h3>Proyecto 2</h3>
+              <p>Descripción breve del proyecto.</p>
+            </div>
+            <div class="project-card fade-in delay-2">
+              <h3>Proyecto 3</h3>
+              <p>Descripción breve del proyecto.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <p>© 2024 Miguel Angel Carlos Rojas. Todos los derechos reservados.</p>
       </div>
-    </section>
-  </main>
+    </footer>
 
-  <footer class="footer">
-    <div class="container">
-      <p>© 2024 Miguel Angel Carlos Rojas. Todos los derechos reservados.</p>
-    </div>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
