--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           <img src="assets/img/profile.jpg" alt="Foto de perfil" />
         </div>
         <div class="intro">
-          <h1>¡Hola, soy Miguel Carlos!</h1>
+          <h1>¡Hola!<br />mi nombre es</h1>
+          <h2>Miguel Carlos</h2>
           <p><span class="typing-text"></span></p>
         </div>
       </div>
