--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             de los suyos.
           </p>
           <p>¡Tómate un minuto y cuéntame qué tienes en mente!</p>
-          <a href="#projects" class="btn">Ver mis proyectos</a>
+          <a href="https://wa.me/123456789" class="btn" target="_blank"
+            >Envíame un WhatsApp</a
+          >
         </div>
       </section>
 
