--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
             de los suyos.
           </p>
           <p>¡Tómate un minuto y cuéntame qué tienes en mente!</p>
-          <a href="https://wa.me/123456789" class="btn" target="_blank"
-            >Envíame un WhatsApp</a
-          >
+          <a href="https://wa.me/914793557" class="btn" target="_blank">
+            <img
+              src="assets/img/whatsapp.webp"
+              alt="WhatsApp"
+              class="whatsapp-icon"
+            />
+            Envíame un WhatsApp
+          </a>
         </div>
       </section>
 
