--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
       <!-- Sección disponible para crear proyectos -->
       <section id="available" class="available">
         <div class="container">
-          <h2>Estoy disponible para crear proyectos</h2>
-          <p>
-            Actualmente estoy aceptando nuevos proyectos y me encantaría saber
-            de los suyos.
-          </p>
-          <p>¡Tómate un minuto y cuéntame qué tienes en mente!</p>
+          <div class="content">
+            <h2 class="title">Estoy disponible para crear proyectos</h2>
+            <p class="description">
+              Actualmente estoy aceptando nuevos proyectos y me encantaría saber
+              de los suyos. ¡Juntos podemos hacer grandes cosas!
+            </p>
+            <p class="call-to-action">
+              Tómate un minuto y cuéntame qué tienes en mente. ¡Hablemos!
+            </p>
+          </div>
           <a href="https://wa.me/914793557" class="btn" target="_blank">
             <img
               src="assets/img/whatsapp.webp"
