--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="intro">
           <h1>¡Hola!<br />mi nombre es</h1>
-          <h2>Miguel Carlos</h2>
+          <h2>Miguel Angel Carlos Rojas</h2>
           <p><span class="typing-text"></span></p>
         </div>
       </div>
@@ -58,24 +58,54 @@
       <!-- Habilidades y Tecnologías -->
       <section id="skills" class="skills">
         <div class="container">
-          <h2>Habilidades y Tecnologías</h2>
+          <h2 class="section-title">Habilidades y Tecnologías</h2>
+          <p class="section-subtitle">
+            Estas son las herramientas y tecnologías que utilizo para crear
+            soluciones modernas y efectivas.
+          </p>
           <div class="skills-grid">
             <div class="skill fade-in delay-1">
+              <div class="icon">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg"
+                  alt="HTML"
+                />
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
+                  alt="CSS"
+                />
+              </div>
               <h3>HTML & CSS</h3>
               <p>Experto en diseño de interfaces web modernas y funcionales.</p>
             </div>
             <div class="skill fade-in delay-2">
+              <div class="icon">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png"
+                  alt="JavaScript"
+                />
+              </div>
               <h3>JavaScript</h3>
-              <p>Habilidad para crear aplicaciones interactivas y dinámicas.</p>
+              <p>Aplicaciones dinámicas e interactivas con lógica eficiente.</p>
             </div>
             <div class="skill fade-in delay-3">
+              <div class="icon">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/5968/5968381.png"
+                  alt="TypeScript"
+                />
+              </div>
               <h3>TypeScript</h3>
-              <p>
-                Escritura de código tipado para aplicaciones robustas y
-                escalables.
-              </p>
+              <p>Código robusto y tipado para proyectos escalables.</p>
             </div>
-            <div class="skill fade-in delay-4">
+            <div class="skill fade-in delay-3">
+              <div class="icon">
+                <img src="https://vitejs.dev/logo.svg" alt="Vite" />
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg"
+                  alt="React"
+                />
+              </div>
               <h3>Vite + React</h3>
               <p>
                 Desarrollo rápido de aplicaciones frontend con herramientas
@@ -83,21 +113,34 @@
               </p>
             </div>
             <div class="skill fade-in delay-5">
+              <div class="icon">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg"
+                  alt="Angular"
+                />
+              </div>
               <h3>Angular</h3>
               <p>Creación de aplicaciones web robustas con arquitectura MVC.</p>
             </div>
             <div class="skill fade-in delay-6">
+              <div class="icon">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/5968/5968672.png"
+                  alt="Bootstrap"
+                />
+              </div>
               <h3>Bootstrap</h3>
-              <p>
-                Desarrollo eficiente con componentes predefinidos y estilos
-                modernos.
-              </p>
+              <p>Diseños rápidos con componentes predefinidos.</p>
             </div>
             <div class="skill fade-in delay-7">
+              <div class="icon">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Tailwind_CSS_Logo.svg"
+                  alt="Tailwind CSS"
+                />
+              </div>
               <h3>Tailwind CSS</h3>
-              <p>
-                Estilización personalizada y flexible para proyectos frontend.
-              </p>
+              <p>Estilos personalizados y flexibles para interfaces únicas.</p>
             </div>
           </div>
         </div>
