--- a/index.html
+++ b/index.html
@@ -107,10 +107,7 @@
                 />
               </div>
               <h3>Vite + React</h3>
-              <p>
-                Desarrollo rápido de aplicaciones frontend con herramientas
-                modernas.
-              </p>
+              <p>Desarrollo de frontend con herramientas modernas.</p>
             </div>
             <div class="skill fade-in delay-5">
               <div class="icon">
@@ -121,6 +118,16 @@
               </div>
               <h3>Angular</h3>
               <p>Creación de aplicaciones web robustas con arquitectura MVC.</p>
+            </div>
+            <div class="skill fade-in delay-2">
+              <div class="icon">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Spring_Boot_Logo_2018.svg"
+                  alt="Spring Boot"
+                />
+              </div>
+              <h3>Spring Boot</h3>
+              <p>Desarrollo rápido de aplicaciones backend con Java.</p>
             </div>
             <div class="skill fade-in delay-6">
               <div class="icon">
