--- a/index.html
+++ b/index.html
@@ -4,18 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio de Miguel Angel Carlos Rojas</title>
-    <link rel="icon" href="assets/img/icon.png" type="image/png">
+    <link rel="icon" href="assets/img/icon.png" type="image/png" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
     <!-- Barra de navegación -->
     <nav class="navbar">
-      <ul>
+      <!-- Logo -->
+      <div class="logo">
+        <a href="#">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png"
+            alt="Logo"
+            class="logo-image"
+          />
+        </a>
+      </div>
+
+      <!-- Enlaces de navegación centrados -->
+      <ul class="nav-left">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Sobre mí</a></li>
         <li><a href="#">Habilidades</a></li>
         <li><a href="#">Proyectos</a></li>
+      </ul>
+
+      <!-- Íconos sociales alineados a la derecha -->
+      <ul class="nav-right">
+        <li>
+          <a
+            href="https://www.linkedin.com/in/miguelacarlos/"
+            target="_blank"
+            aria-label="LinkedIn"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/145/145807.png"
+              alt="LinkedIn"
+              class="social-icon"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/MiguelCarlosRojas" target="_blank" aria-label="GitHub">
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+              alt="GitHub"
+              class="social-icon"
+            />
+          </a>
+        </li>
       </ul>
     </nav>
 
