--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
           </a>
         </li>
         <li>
-          <a href="https://github.com/MiguelCarlosRojas" target="_blank" aria-label="GitHub">
+          <a
+            href="https://github.com/MiguelCarlosRojas"
+            target="_blank"
+            aria-label="GitHub"
+          >
             <img
               src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
               alt="GitHub"
