--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="logo">
         <a href="#">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png"
+            src="assets/img/icon.png"
             alt="Logo"
             class="logo-image"
           />
