--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
       <!-- Logo -->
       <div class="logo">
         <a href="#">
-          <img
-            src="assets/img/icon.png"
-            alt="Logo"
-            class="logo-image"
-          />
+          <img src="assets/img/icon.png" alt="Logo" class="logo-image" />
         </a>
       </div>
 
@@ -26,7 +22,7 @@
       <ul class="nav-left">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Sobre mí</a></li>
-        <li><a href="#">Habilidades</a></li>
+        <li><a href="#skills">Habilidades</a></li>
         <li><a href="#">Proyectos</a></li>
       </ul>
 
