--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- Enlaces de navegación centrados -->
       <ul class="nav-left">
         <li><a href="#">Inicio</a></li>
-        <li><a href="#">Sobre mí</a></li>
+        <li><a href="#about">Sobre mí</a></li>
         <li><a href="#skills">Habilidades</a></li>
         <li><a href="#">Proyectos</a></li>
       </ul>
@@ -71,6 +71,42 @@
     </header>
 
     <main>
+      <!-- Sección Sobre mí -->
+      <section id="about" class="about">
+        <div class="container">
+          <h2 class="section-title">Sobre mí</h2>
+          <p class="section-subtitle">
+            Soy un desarrollador apasionado por la tecnología y la creación de
+            soluciones innovadoras. Me encanta trabajar en equipo, aprender
+            nuevas herramientas y enfrentar desafíos complejos.
+          </p>
+          <div class="about-content">
+            <div class="about-text">
+              <p>
+                Con experiencia en diseño y desarrollo de aplicaciones web, he
+                trabajado con tecnologías como <strong>HTML</strong>,
+                <strong>CSS</strong>, <strong>JavaScript</strong>,
+                <strong>TypeScript</strong>, <strong>React</strong>, y más. Mi
+                enfoque principal es crear experiencias de usuario intuitivas y
+                atractivas.
+              </p>
+              <p>
+                Además, tengo un gran interés en el backend, utilizando
+                frameworks como <strong>Spring Boot</strong> para construir
+                aplicaciones escalables y eficientes.
+              </p>
+            </div>
+            <div class="about-image">
+              <img
+                src="https://via.placeholder.com/300x300"
+                alt="Sobre mí"
+                class="profile-image"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Sección disponible para crear proyectos -->
       <section id="available" class="available">
         <div class="container">
