--- a/index.html
+++ b/index.html
@@ -158,10 +158,7 @@
                 />
               </div>
               <h3>CSS</h3>
-              <p>
-                Estilos avanzados para una experiencia visual atractiva y
-                fluida.
-              </p>
+              <p>Estilos avanzados para experiencia visual fluida.</p>
             </div>
             <div class="skill fade-in delay-3">
               <div class="icon">
@@ -187,7 +184,7 @@
             <div class="skill fade-in delay-5">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg"
+                  src="https://www.svgrepo.com/show/353396/angular-icon.svg"
                   alt="Angular"
                 />
               </div>
@@ -207,7 +204,7 @@
             <div class="skill fade-in delay-7">
               <div class="icon">
                 <img
-                  src="https://cdn-icons-png.flaticon.com/512/5968/5968672.png"
+                  src="https://www.svgrepo.com/show/353498/bootstrap.svg"
                   alt="Bootstrap"
                 />
               </div>
@@ -217,7 +214,7 @@
             <div class="skill fade-in delay-8">
               <div class="icon">
                 <img
-                  src="https://cdn-icons-png.flaticon.com/512/919/919853.png"
+                  src="https://www.svgrepo.com/show/331370/docker.svg"
                   alt="Docker"
                 />
               </div>
@@ -227,32 +224,27 @@
             <div class="skill fade-in delay-9">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Git_logo_2.svg/200px-Git_logo_2.svg.png"
+                  src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Git_icon.svg"
                   alt="Git"
                 />
               </div>
               <h3>Git</h3>
-              <p>
-                Control de versiones para gestionar y coordinar cambios en el
-                código.
-              </p>
+              <p>Control de versiones para gestionar cambios.</p>
             </div>
             <div class="skill fade-in delay-10">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Git_logo_2.svg/200px-Git_logo_2.svg.png"
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
                   alt="GitHub"
                 />
               </div>
               <h3>GitHub</h3>
-              <p>
-                Colaboración en proyectos y almacenamiento de código fuente.
-              </p>
+              <p>Colaboración en proyectos y almacenamiento de código.</p>
             </div>
             <div class="skill fade-in delay-11">
               <div class="icon">
                 <img
-                  src="https://cdn-icons-png.flaticon.com/512/2048/2048423.png"
+                  src="https://www.svgrepo.com/show/353735/firebase.svg"
                   alt="Firebase"
                 />
               </div>
@@ -262,7 +254,7 @@
             <div class="skill fade-in delay-12">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/4/47/Postman_Logo.png"
+                  src="https://www.svgrepo.com/show/354202/postman-icon.svg"
                   alt="Postman"
                 />
               </div>
@@ -272,7 +264,7 @@
             <div class="skill fade-in delay-13">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/MySQL_logo_2013.svg/256px-MySQL_logo_2013.svg.png"
+                  src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg"
                   alt="MySQL"
                 />
               </div>
@@ -282,149 +274,126 @@
             <div class="skill fade-in delay-14">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Postgresql_elephant.svg"
+                  src="https://www.vectorlogo.zone/logos/postgresql/postgresql-vertical.svg"
                   alt="PostgreSQL"
                 />
               </div>
               <h3>PostgreSQL</h3>
-              <p>Administración de bases de datos avanzadas con PostgreSQL.</p>
+              <p>Gestión avanzada de bases de datos PostgreSQL.</p>
             </div>
             <div class="skill fade-in delay-15">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/4/4f/MongoDB_Logo.svg"
+                  src="https://cdn.iconscout.com/icon/free/png-256/free-mongodb-logo-icon-download-in-svg-png-gif-file-formats--wordmark-programming-langugae-freebies-pack-logos-icons-1175140.png"
                   alt="MongoDB"
                 />
               </div>
               <h3>MongoDB</h3>
               <p>Gestión de bases de datos NoSQL con MongoDB.</p>
             </div>
-            <div class="skill fade-in delay-16">
-              <div class="icon">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/6/63/SQL_Server_Management_Studio_Logo.svg"
-                  alt="SQL Server Management Studio"
-                />
-              </div>
-              <h3>SQL Server Management Studio</h3>
-              <p>
-                Herramienta de administración para bases de datos SQL Server.
-              </p>
-            </div>
-            <div class="skill fade-in delay-17">
-              <div class="icon">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/7/75/Oracle_logo.svg"
-                  alt="Oracle SQL Developer"
-                />
-              </div>
-              <h3>Oracle SQL Developer</h3>
-              <p>Desarrollo y administración de bases de datos Oracle SQL.</p>
-            </div>
             <div class="skill fade-in delay-18">
               <div class="icon">
                 <img
-                  src="https://cdn-icons-png.flaticon.com/512/716/716784.png"
-                  alt="Trabajo en equipo"
-                />
-              </div>
-              <h3>Trabajo en equipo</h3>
-              <p>Colaboración efectiva para lograr objetivos comunes.</p>
-            </div>
-            <div class="skill fade-in delay-19">
-              <div class="icon">
-                <img
-                  src="https://cdn-icons-png.flaticon.com/512/1286/1286851.png"
-                  alt="Liderazgo"
-                />
-              </div>
-              <h3>Liderazgo</h3>
-              <p>Habilidad para coordinar equipos y proyectos exitosos.</p>
-            </div>
-            <div class="skill fade-in delay-20">
-              <div class="icon">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Bitcoin_logo.svg/256px-Bitcoin_logo.svg.png"
+                  src="https://www.svgrepo.com/show/507948/bitcoin-circle.svg"
                   alt="Blockchain"
                 />
               </div>
               <h3>Blockchain</h3>
               <p>Desarrollo y comprensión de tecnologías descentralizadas.</p>
             </div>
-            <div class="skill fade-in delay-21">
+            <div class="skill fade-in delay-16">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Trello_Logo.svg"
+                  src="https://cs.hofstra.edu/docs/images/software/ssms.png"
+                  alt="SQL Server Management Studio"
+                />
+              </div>
+              <h3>SQL Server Management Studio</h3>
+              <p>Herramienta avanzada de administración SQL Server.</p>
+            </div>
+            <div class="skill fade-in delay-17">
+              <div class="icon">
+                <img
+                  src="https://icon.icepanel.io/Technology/svg/SQL-Developer.svg"
+                  alt="Oracle SQL Developer"
+                />
+              </div>
+              <h3>Oracle SQL Developer</h3>
+              <p>Desarrollo y administración de bases de datos Oracle SQL.</p>
+            </div>
+            <div class="skill fade-in delay-19">
+              <div class="icon">
+                <img
+                  src="https://www.vectorlogo.zone/logos/trello/trello-tile.svg"
                   alt="Trello"
                 />
               </div>
               <h3>Trello</h3>
-              <p>Gestión de proyectos y tareas de forma eficiente.</p>
+              <p>
+                Gestión de proyectos y tareas colaborativa de forma eficiente.
+              </p>
+            </div>
+            <div class="skill fade-in delay-20">
+              <div class="icon">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/6/66/Google_Docs_2020_Logo.svg"
+                  alt="Google Docs"
+                />
+              </div>
+              <h3>Google Docs</h3>
+              <p>Creación y colaboración en documentos de texto.</p>
+            </div>
+            <div class="skill fade-in delay-21">
+              <div class="icon">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Google_Slides_logo_%282014-2020%29.svg"
+                  alt="Google Slides"
+                />
+              </div>
+              <h3>Google Slides</h3>
+              <p>Creación y presentación de diapositivas interactivas.</p>
             </div>
             <div class="skill fade-in delay-22">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Google_Docs_logo_2020.svg/1024px-Google_Docs_logo_2020.svg.png"
-                  alt="Documentos de Google"
+                  src="https://upload.wikimedia.org/wikipedia/commons/3/30/Google_Sheets_logo_%282014-2020%29.svg"
+                  alt="Google Sheets"
                 />
               </div>
-              <h3>Documentos de Google</h3>
-              <p>Creación y colaboración en documentos de texto.</p>
-            </div>
-            <div class="skill fade-in delay-23">
-              <div class="icon">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Google_Presentations_logo_2020.svg/1200px-Google_Presentations_logo_2020.svg.png"
-                  alt="Presentaciones de Google"
-                />
-              </div>
-              <h3>Presentaciones de Google</h3>
-              <p>Creación y presentación de diapositivas interactivas.</p>
-            </div>
-            <div class="skill fade-in delay-24">
-              <div class="icon">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Google_Sheets_logo_2020.svg"
-                  alt="Hojas de cálculo de Google"
-                />
-              </div>
-              <h3>Hojas de cálculo de Google</h3>
+              <h3>Google Sheets</h3>
               <p>
                 Gestión de datos y fórmulas en hojas de cálculo colaborativas.
               </p>
             </div>
-            <div class="skill fade-in delay-25">
+            <div class="skill fade-in delay-23">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/4/47/Google_Forms_logo_2020.svg"
-                  alt="Formularios de Google"
+                  src="https://www.svgrepo.com/show/223052/forms-document.svg"
+                  alt="Google Forms"
                 />
               </div>
-              <h3>Formularios de Google</h3>
+              <h3>Google Forms</h3>
               <p>Creación de formularios y encuestas de forma sencilla.</p>
             </div>
-            <div class="skill fade-in delay-26">
+            <div class="skill fade-in delay-24">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Google_Meet_logo_2020.svg"
+                  src="https://www.svgrepo.com/show/343559/google-meet-meeting-communication-team.svg"
                   alt="Google Meet"
                 />
               </div>
               <h3>Google Meet</h3>
               <p>Plataforma de videoconferencias para reuniones remotas.</p>
             </div>
-            <div class="skill fade-in delay-27">
+            <div class="skill fade-in delay-25">
               <div class="icon">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Google_Drive_logo_2020.svg"
+                  src="https://www.svgrepo.com/show/353811/google-drive.svg"
                   alt="Google Drive"
                 />
               </div>
               <h3>Google Drive</h3>
-              <p>
-                Almacenamiento en la nube para compartir y colaborar en
-                archivos.
-              </p>
+              <p>Almacenamiento en la nube para colaborar en archivos.</p>
             </div>
           </div>
         </div>
