--- a/index.html
+++ b/index.html
@@ -305,20 +305,20 @@
               <div class="icon">
                 <img
                   src="https://cs.hofstra.edu/docs/images/software/ssms.png"
-                  alt="SQL Server Management Studio"
+                  alt="SQL Server"
                 />
               </div>
-              <h3>SQL Server Management Studio</h3>
+              <h3>SQL Server</h3>
               <p>Herramienta avanzada de administración SQL Server.</p>
             </div>
             <div class="skill fade-in delay-17">
               <div class="icon">
                 <img
                   src="https://icon.icepanel.io/Technology/svg/SQL-Developer.svg"
-                  alt="Oracle SQL Developer"
+                  alt="Oracle SQL"
                 />
               </div>
-              <h3>Oracle SQL Developer</h3>
+              <h3>Oracle SQL</h3>
               <p>Desarrollo y administración de bases de datos Oracle SQL.</p>
             </div>
             <div class="skill fade-in delay-19">
